--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="lightgrey">#9E9E9E</color>
 
 
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">#757575</color>
+    <color name="textLight">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+
+
 </resources>
