--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="big_fab_margin">74dp</dimen>
-    <dimen name="custom_margin" >8dp</dimen>
+    <dimen name="custom_margin">8dp</dimen>
 
     <dimen name="icon_top_margin">24dp</dimen>
     <dimen name="title_bottom_margin">16dp</dimen>
@@ -39,6 +39,17 @@
 
     <dimen name="title_text_size_x_large">32sp</dimen>
     <dimen name="text_size_x_large">28sp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+
+
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="title_text_size">32sp</dimen>
+    <dimen name="body_text_size">22sp</dimen>
 
     /*
     normal * 0.75 - ldpi (small) //mdpi dimens *0.75
